--- a/Assignment 3/file.css
+++ b/Assignment 3/file.css
@@ -12,7 +12,7 @@
   }
 .clock{
   text-align: center;
-  background-image: url('images/clockimage.png');
+  background-image: url('Images/clockimage.png');
   background-size: 100% 100%;
   background-repeat: no-repeat;
   position: relative;
@@ -60,7 +60,7 @@
 }
 .imageContainer{
   position: relative;
-  background-image: url('images/Manhattan.jpg');
+  background-image: url('Images/Manhattan.jpg');
   height:500px;
   background-repeat: no-repeat;
   background-size: 100% 100%;
